fix the skinny on mobile, adjust growing leaves a bit

--- a/web/src/styles/mixins.scss
+++ b/web/src/styles/mixins.scss
@@ -239,7 +239,6 @@ $widthDesktop: $widthXL;
 @keyframes growingLeaves2 {
     0% {
         opacity: 0;
-        transform: scale(0.7) translate(19px, 18px);
     }
     5% {
         opacity: 1;
